src/objects/CommcareToSalesforceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Limit_Parameter__c</fullName>
        <label>API Limit Parameter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommCare_Password__c</fullName>
        <label>CommCare Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommCare_User_Name__c</fullName>
        <label>CommCare User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <label>Server URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Skip_in_batch_job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip in batch job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CommcareToSalesforceSettings</label>
</CustomObject>